@@ -27,7 +27,7 @@ AR     = ar
 RANLIB = ranlib
 
 # Default libraries to link if configure is not used
-htslib_default_libs = -lz -lm
+htslib_default_libs = -lz -lm -lbz2 -llzma
 
 CPPFLAGS =
 # TODO: probably update cram code to make it compile cleanly with -Wc++-compat
@@ -205,7 +205,9 @@ thread_pool_internal_h = thread_pool_internal.h $(htslib_thread_pool_h)
 # Usually config.h is generated by running configure or config.status,
 # but if those aren't used create a default config.h here.
 config.h:
-	echo '/* Empty config.h generated by Makefile */' > $@
+	echo '/* Default config.h generated by Makefile */' > $@
+	echo '#define HAVE_LIBBZ2 1' >> $@
+	echo '#define HAVE_LIBLZMA 1' >> $@
 
 # And similarly for htslib.pc.tmp ("pkg-config template").  No dependency
 # on htslib.pc.in listed, as if that file is newer the usual way to regenerate
