@@ -17,6 +17,10 @@ Noteworthy changes in release 1.4
   - fai_load() will no longer save local copies of remote fasta indexes
   - hts_idx_get_meta() now takes a uint32_t * for l_meta (was int32_t *)
 
+* HTSlib now links against libbz2 and liblzma by default.  To remove these
+  dependencies, run configure with options --disable-bz2 and --disable-lzma,
+  but note that this may make some CRAM files produced elsewhere unreadable. 
+
 * Added a thread pool interface and replaced the bgzf multi-threading
   code to use this pool.  BAM and CRAM decoding is now multi-threaded
   too, using the pool to automatically balance the number of threads
